--- a/examples/exmple1.ipynb
+++ b/examples/exmple1.ipynb
@@ -1,6 +1,15 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Intro\n",
+    "\n",
+    "Generate a single simulated segment and visualize it"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
@@ -128,44 +137,6 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "1"
-      ]
-     },
-     "execution_count": 8,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "len()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 2,
-   "metadata": {},
-   "outputs": [
-    {
-     "ename": "",
-     "evalue": "",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31mThe Kernel crashed while executing code in the the current cell or a previous cell. Please review the code in the cell(s) to identify a possible cause of the failure. Click <a href='https://aka.ms/vscodeJupyterKernelCrash'>here</a> for more info. View Jupyter <a href='command:jupyter.viewOutput'>log</a> for further details."
-     ]
-    }
-   ],
-   "source": [
-    "pv.Sphere().plot()"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 12,
    "metadata": {},
    "outputs": [
@@ -181,7 +152,7 @@
    "source": [
     "plotter = pv.Plotter()\n",
     "plotter.add_points(sims_dfs[0][['x','y','z']].values, scalars=sims_dfs[0]['type'])\n",
-    "plotter.show()a"
+    "plotter.show()"
    ]
   }
  ],
