--- a/examples/example1.ipynb
+++ b/examples/example1.ipynb
@@ -67,44 +67,6 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "probes_parameters = {\n",
-    "    'probes_per_mb': 5000*0.75,\n",
-    "    'segment_width_nm': 500\n",
-    "    }\n",
-    "combination_parameters = {\n",
-    "    'segment_length_nm': 1000000,\n",
-    "    'segments_per_sim': 2,\n",
-    "    'segs_per_comb_is_random': False,\n",
-    "    'selection_procedure': 'random',\n",
-    "    'num_simulations': 1,\n",
-    "    'max_shift_amount_nm': 3000,\n",
-    "    'arrangement': 'lattice',\n",
-    "    'random_seed': 0\n",
-    "}\n",
-    "localization_parameters = {\n",
-    "    'fov_size': np.array([10000, 4000, 4000]),\n",
-    "    'labels_per_probe': 2,\n",
-    "    'precision_mean': np.array([10.,10.,50.]),\n",
-    "    'precision_sd': np.array([5.,5.,20.]),\n",
-    "    'bleaching_prob': 0.25,\n",
-    "    'unbound_probes_per_bound': 160,\n",
-    "    'is_unbound_rate_random': True,\n",
-    "    'attraction_towards_bound': False,\n",
-    "    'attraction_iterations': 7,\n",
-    "    'attraction_radius_nm': 1000,\n",
-    "    'probe_width_nm': 120,\n",
-    "    'attraction_factor': 10,\n",
-    "    'random_noise_per_blinks': 50,\n",
-    "    'detection_rate': 1.0\n",
-    "}"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 3,
    "metadata": {},
    "outputs": [],
@@ -114,7 +76,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -134,22 +96,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "",
-     "evalue": "",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31mThe Kernel crashed while executing code in the the current cell or a previous cell. Please review the code in the cell(s) to identify a possible cause of the failure. Click <a href='https://aka.ms/vscodeJupyterKernelCrash'>here</a> for more info. View Jupyter <a href='command:jupyter.viewOutput'>log</a> for further details."
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "plotter = pv.Plotter()\n",
     "plotter.add_points(sims_dfs[0][['x','y','z']].values, scalars=sims_dfs[0]['type'])\n",
-    "plotter.show()"
+    "# plotter.show()\n",
+    "exportPyVistaPlot(plotter)"
    ]
   }
  ],
