cleaned examples and readme

--- a/examples/generate_and_visualize.ipynb
+++ b/examples/generate_and_visualize.ipynb
@@ -4,9 +4,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Intro\n",
-    "\n",
-    "Generate a single simulated segment and visualize it"
+    "### Generate a single simulated experiment and visualize it"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Imports"
    ]
   },
   {
@@ -27,6 +32,13 @@
     "\n",
     "import warnings\n",
     "warnings.filterwarnings(\"ignore\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Specify the simulation parameters"
    ]
   },
   {
@@ -66,12 +78,26 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Retrieve low-resolution traces of real chromosomes"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
     "dls, lengths = getChr21DLs()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Simulate"
    ]
   },
   {
@@ -95,6 +121,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Visualize"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 5,
    "metadata": {},
@@ -102,7 +135,12 @@
    "source": [
     "plotter = pv.Plotter()\n",
     "plotter.add_points(sims_dfs[0][['x','y','z']].values, scalars=sims_dfs[0]['type'])\n",
+    "\n",
+    "# Use plotter.show() if you're working in local. This will display the plot directly inside this notebook, below this cell.\n",
     "# plotter.show()\n",
+    "\n",
+    "# Use exportPyVistaPlot to export the plot to an html file that can be opened in a browser.\n",
+    "# This is useful for sharing the plot with others or you're running the notebook on remote machine, in which case plotter.show would throw an error.\n",
     "exportPyVistaPlot(plotter)"
    ]
   }
